# tron-grid

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  STYLE.md  TODO.md  tsan_suppressions.txt
.claude/: CLAUDE.md
.claude/commands/: audit-code.md  check-spelling.md  check-style.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/setup-vulkan-linux/: action.yml
.github/actions/setup-vulkan-windows/: action.yml
.github/scripts/: cleanup-caches.js
.github/workflows/: ci_main.yml  ci_pr.yml  cleanup_caches.yml  pr-validation.yml  release.yml
docs/: AI_INTERFACE.md  ARCHITECTURE.md  DEV_ENV_SETUP.md  PBR.md  VISION.md
libs/: CMakeLists.txt
libs/logging/: CMakeLists.txt
libs/logging/include/log/: logger.hpp
libs/logging/reference/: logger_reference.cpp  logger_reference.h
libs/logging/src/: logger.cpp
libs/logging/tests/: CMakeLists.txt  logger_tests.cpp
libs/math/: CMakeLists.txt
libs/math/include/math/: mat.hpp  matrix.hpp  projection.hpp  quat.hpp  quaternion.hpp  vec.hpp  vector.hpp
libs/math/tests/: CMakeLists.txt  math_tests.cpp
libs/signal/: CMakeLists.txt
libs/signal/include/signal/: signal.hpp
libs/signal/tests/: CMakeLists.txt  signal_tests.cpp
libs/signals/: CMakeLists.txt
libs/signals/include/signal/: signal.hpp
libs/signals/tests/: CMakeLists.txt  signal_tests.cpp
libs/test_fixture/: CMakeLists.txt
libs/test_fixture/include/test_fixture/: test_fixture.hpp
libs/test_fixture/src/: test_fixture.cpp
libs/test_fixture/tests/: CMakeLists.txt  test_fixture_self_tests.cpp
libs/testing/: CMakeLists.txt
libs/testing/include/testing/: testing.hpp
libs/testing/src/: testing.cpp
libs/testing/tests/: CMakeLists.txt  testing_self_tests.cpp
libs/window/: CMakeLists.txt
libs/window/include/window/: win32_window.hpp  window.hpp  window_event.hpp  xcb_window.hpp
libs/window/src/: win32_window.cpp  win32_window.hpp  window.cpp  xcb_window.cpp  xcb_window.hpp
libs/window/tests/: CMakeLists.txt  window_tests.cpp
src/: CMakeLists.txt  allocator.cpp  allocator.hpp  bloom_downsample.slang  camera.hpp  components.hpp  cull.slang  device.cpp  device.hpp  gpu_device.cpp  gpu_device.hpp  gpu_instance.cpp  gpu_instance.hpp  gpu_surface.cpp  gpu_surface.hpp  gpu_swapchain.cpp  gpu_swapchain.hpp  inject_density.slang  instance.cpp  instance.hpp  main.cpp  mesh.slang  meshlet.cpp  meshlet.hpp  pipeline.cpp  pipeline.hpp  postprocess.slang  scene.hpp  signal.hpp  skybox.slang  skybox_common.slang  surface.cpp  surface.hpp  svgf_denoise.slang  swapchain.cpp  swapchain.hpp  task.slang  terrain.cpp  terrain.hpp  triangle.slang  (+4 more)
src/window/: win32_window.cpp  win32_window.hpp  window.hpp  window_event.hpp  xcb_window.cpp  xcb_window.hpp
